Build price list item builder
